add sun.jvmstat.monitor to add-opens
GitOrigin-RevId: 781720e90ec6926d0df2d89ed982f2a1f5f27deb